--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
             android:id="@+id/name_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine" />
-        <!--android:hint="@string/album_description"-->
+            android:hint="Name"
+            android:inputType="textCapWords" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,6 @@
             android:textAppearance="?android:textAppearanceMedium"
             android:textSize="16sp" />
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
-                android:text="0"
+                android:text="1"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
             <!--android:padding="16sp"-->
